--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
-    <script src="script.js"></script>
+    <script src="practise.js"></script>
+    <script src="theory.js"></script>
 </body>
 </html>
